Fix align and transform for table caption and fix padding on header row

--- a/server/static/style.less
+++ b/server/static/style.less
@@ -169,9 +169,10 @@ table.item-table {
 
   caption {
     font-family: @teuton-normal;
-    font-size: 12pt;
+    font-size: 16pt;
     color: @darkgreen;
-    text-transform: capitalize;
+    text-transform: uppercase;
+    text-align: left;
   }
 
   td {
@@ -192,6 +193,10 @@ table.item-table {
     color: white;
     background: #384d3e;
     white-space: nowrap;
+
+    td {
+      padding: 2px 5px;
+    }
   }
 
   tbody {
